CSS updates for transactions and css fix for picka-a-team z-index issue

--- a/app/webpages/transactions-page/transactions.page.less
+++ b/app/webpages/transactions-page/transactions.page.less
@@ -49,11 +49,16 @@
       }
     } //&-container
 
-
-
     .no-data{
+      min-height: 130px; //min-height set so enough room is available to see entire dropdown when no data
       height: 70px;
       margin: 5px auto;
+    }
+
+    .pane {
+      .side-scroller {
+        min-height: 180px; //min-height set so enough room is available to see entire dropdown when no data
+      }
     }
   } //&-page
 
